--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,4 @@
+# -------------------- Thanks to GitHub below ------------------
 # Compiled Lua sources
 luac.out
 
@@ -39,3 +40,5 @@ luac.out
 *.x86_64
 *.hex
 
+# --------------------- For atom editor ---------------------
+.tags*
